--- a/lxmf/Cargo.toml
+++ b/lxmf/Cargo.toml
@@ -11,3 +11,7 @@ rns-core = { workspace = true, features = ["std"] }
 rns-net.workspace = true
 log.workspace = true
 rayon.workspace = true
+
+[dev-dependencies]
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
