Phase 8b: Daemon wiring, control handlers, and peer collection
Wire up the full daemon main loop with RnsNode, LxmfCallbacks,
job thread, announce timers, and graceful shutdown. Implement
remote control client for --status/--peers/--sync/--break with
link-based request/response. Add peers HashMap to LxmRouter with
load/save persistence and sync_peer()/unpeer() methods. Wire
server-side sync and unpeer control handlers to router. Fix
propagation stamp stripping bug with has_stamp field. Add
env_logger backend.

--- a/lxmd/Cargo.toml
+++ b/lxmd/Cargo.toml
@@ -11,3 +11,4 @@ rns-net.workspace = true
 rns-core = { workspace = true, features = ["std"] }
 rns-crypto = { workspace = true, features = ["std"] }
 log.workspace = true
+env_logger = "0.11"
