--- a/lxmf/Cargo.toml
+++ b/lxmf/Cargo.toml
@@ -15,3 +15,4 @@ rayon.workspace = true
 [dev-dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+env_logger = "0.11"
