--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ repository = "https://github.com/lelloman/lxmf-rs"
 authors = ["lxmf-rs contributors"]
 
 [workspace.dependencies]
-rns-crypto = { version = "0.1.0", default-features = false }
-rns-core = { version = "0.1.0", default-features = false }
-rns-net = "0.1.0"
+rns-crypto = { version = "0.1.0", default-features = false, path = "../rns-rs/rns-crypto" }
+rns-core = { version = "0.1.0", default-features = false, path = "../rns-rs/rns-core" }
+rns-net = { version = "0.1.0", path = "../rns-rs/rns-net" }
 lxmf-core = { version = "0.1.0", path = "lxmf-core" }
 lxmf = { version = "0.1.0", path = "lxmf" }
 log = "0.4"
