--- a/lxmf-core/Cargo.toml
+++ b/lxmf-core/Cargo.toml
@@ -3,6 +3,9 @@ name = "lxmf-core"
 description = "Core LXMF message format, constants, and stamp validation (no_std)"
 version.workspace = true
 edition.workspace = true
+license-file.workspace = true
+repository.workspace = true
+authors.workspace = true
 
 [features]
 default = ["std"]
